# SHWizard

./: .gitignore  GETTING_STARTED.md  Makefile  README.md  build.py  demo_keyword_search.md  migrate_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
docs/: README_EN.md
shwizard/: __init__.py  __main__.py  cli.py
shwizard/core/: ai_service.py  context_manager.py  executor.py
shwizard/data/: dangerous_commands.yaml  default_config.yaml  llm_optimization.yaml
shwizard/llm/: __init__.py  llmcpp_manager.py  model_downloader.py  model_registry.py  ollama_manager.py
shwizard/safety/: checker.py  rules.py
shwizard/storage/: config.py  database.py  history.py
shwizard/utils/: completion.py  config_migrator.py  config_validator.py  hardware_detector.py  i18n.py  input_utils.py  llm_optimizer.py  logger.py  output_utils.py  platform_error_handler.py  platform_optimizer.py  platform_utils.py  prompt_utils.py
tests/: test_cli_language_detection.py  test_input_utils.py  test_output_utils.py  test_prompt_utils.py  test_safety.py  test_storage.py
